Add profile component

--- a/humblib/src/app/header/header.component.html
+++ b/humblib/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="bg-emerald-900">
+  <div class="container mx-auto">
+    <div class="flex mx-3 justify-between items-center">
+      <div class="text-cyan-50 text-xl font-bold tracking-wide">Humblib</div>
+      <app-profile></app-profile>
+    </div>
+  </div>
+</div>
