--- a/humblib/src/app/main/main.component.html
+++ b/humblib/src/app/main/main.component.html
@@ -1,8 +1,9 @@
 <div class="bg-emerald-50">
-  <div class="container mx-auto">
-    <div class="text-center text-3xl text-emerald-900">
+  <div class="container mx-auto flex flex-col">
+    <div class="text-center text-4xl mt-12 text-emerald-900">
       Welcome to your library!
     </div>
-    <div></div>
+
+    <app-menu></app-menu>
   </div>
 </div>
