--- a/humblib/src/app/main/main.component.html
+++ b/humblib/src/app/main/main.component.html
@@ -1,9 +1,11 @@
-<div class="bg-emerald-50">
+<div
+  class="min-h-screen flex flex-col justify-center content-around bg-emerald-50"
+>
   <div class="container mx-auto flex flex-col">
-    <div class="text-center text-4xl mt-12 text-emerald-900">
+    <div class="text-center text-4xl mt-4 text-emerald-900">
       Welcome to your library!
     </div>
 
-    <app-menu></app-menu>
+    <app-menu class="mb-48"></app-menu>
   </div>
 </div>
