--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row text-center my-10 mx-2 flex-wrap">
+<div class="flex flex-row text-center mx-2 flex-wrap">
   <a href="" class="flex-1 transition mx-6 my-6">
     <div class="card-list border-emerald-500 items-center border rounded">
       <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
