Add list route and general routing

--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -1,30 +1,39 @@
-<div class="flex flex-row text-center mx-2 flex-wrap">
-  <a href="" class="flex-1 transition mx-6 my-6">
-    <div class="card-list border-emerald-500 items-center border rounded">
-      <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
-        List
-      </div>
+<div class="mb-48">
+  <div class="container mx-auto flex flex-col">
+    <div class="text-center text-4xl mt-4 text-emerald-900">
+      Welcome to your library!
     </div>
-  </a>
-  <a href="" class="flex-1 transition mx-6 my-6">
-    <div class="card-cat border-emerald-500 items-center border rounded">
-      <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
-        Categorization
-      </div>
+    <div class="flex flex-row text-center mx-2 flex-wrap">
+      <a routerLink="/list" class="flex-1 transition mx-6 my-6">
+        <div class="card-list border-emerald-500 items-center border rounded">
+          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+            List
+          </div>
+        </div>
+      </a>
+      <a href="" class="flex-1 transition mx-6 my-6">
+        <div class="card-cat border-emerald-500 items-center border rounded">
+          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+            Categorization
+          </div>
+        </div>
+      </a>
+      <a href="" class="flex-1 transition mx-6 my-6">
+        <div
+          class="card-library border-emerald-500 items-center border rounded"
+        >
+          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+            Library
+          </div>
+        </div>
+      </a>
+      <a href="" class="flex-1 transition mx-6 my-6">
+        <div class="card-note border-emerald-500 items-center border rounded">
+          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+            Notes
+          </div>
+        </div>
+      </a>
     </div>
-  </a>
-  <a href="" class="flex-1 transition mx-6 my-6">
-    <div class="card-library border-emerald-500 items-center border rounded">
-      <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
-        Library
-      </div>
-    </div>
-  </a>
-  <a href="" class="flex-1 transition mx-6 my-6">
-    <div class="card-note border-emerald-500 items-center border rounded">
-      <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
-        Notes
-      </div>
-    </div>
-  </a>
+  </div>
 </div>
