--- a/humblib/src/app/profile/profile.component.html
+++ b/humblib/src/app/profile/profile.component.html
@@ -1,7 +1,12 @@
-<a href="" class="flex flex-col items-center my-2">
+<a routerLink="/login" class="flex flex-col items-center my-2">
   <img
     src="https://cdn.iconscout.com/icon/free/png-512/profile-289-460696.png?f=avif&w=256"
     class="w-8"
   />
-  <div class="text-xs text-cyan-50">Profile</div>
+  <div class="text-xs text-cyan-50" *ngIf="this.loggerService.profileName">
+    {{ this.loggerService.profileName }}
+  </div>
+  <div class="text-xs text-cyan-50" *ngIf="!this.loggerService.profileName">
+    Login
+  </div>
 </a>
