--- a/humblib/src/app/list/list.component.html
+++ b/humblib/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
   <div class="flex flex-col">
-    <div *ngFor="let book of books"></div>
+    <div *ngFor="let book of this.libraryService.books">{{ book.name }}</div>
   </div>
 </div>
