Configure centering accordingly

--- a/humblib/src/app/main/main.component.html
+++ b/humblib/src/app/main/main.component.html
@@ -1,5 +1,3 @@
-<div
-  class="min-h-screen flex flex-col justify-center content-around bg-emerald-50"
->
+<div class="main min-h-screen flex flex-col content-around bg-emerald-50">
   <router-outlet></router-outlet>
 </div>
