--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="mb-48">
+<div class="menu mb-48">
   <div class="container mx-auto flex flex-col">
     <div class="text-center text-4xl mt-4 text-emerald-900">
       Welcome to your library!
