--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto text-emerald-900">
+<div class="login container mx-auto text-emerald-900">
   <div class="flex justify-center mb-48">
     <form
       (ngSubmit)="onSubmit()"
