Add link to main page

--- a/humblib/src/app/header/header.component.html
+++ b/humblib/src/app/header/header.component.html
@@ -1,7 +1,11 @@
 <div class="bg-emerald-900">
   <div class="container mx-auto">
     <div class="flex mx-3 justify-between items-center">
-      <div class="text-cyan-50 text-xl font-bold tracking-wide">Humblib</div>
+      <a routerLink="/"
+        ><div class="text-cyan-50 text-xl font-bold tracking-wide">
+          Humblib
+        </div></a
+      >
       <app-profile></app-profile>
     </div>
   </div>
