--- a/humblib/src/app/adbook/adbook.component.html
+++ b/humblib/src/app/adbook/adbook.component.html
@@ -1,10 +1,16 @@
-<form>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <label for="name">Book Name</label>
-  <input type="text" name="name" id="name" />
-  <label for="categories">Categories</label>
-  <select name="" id="">
-    <option *ngFor="let category of this.libraryService.categories" value="">
-      {{ category.name }}
-    </option>
-  </select>
+  <input type="text" formControlName="name" name="name" id="name" />
+  <div *ngFor="let cat of this.libraryService.categories">
+    <label
+      ><input
+        type="checkbox"
+        [value]="cat.name"
+        (change)="onCheckboxChange($event)"
+        id=""
+      />
+      {{ cat.name }}
+    </label>
+  </div>
+  <input type="submit" value="Submit" />
 </form>
