--- a/humblib/src/app/list/list.component.html
+++ b/humblib/src/app/list/list.component.html
@@ -1,7 +1,10 @@
 <div class="container mx-auto">
   <div class="flex flex-col">
     <div *ngFor="let book of this.libraryService.books">
-      {{ book.name }} == {{ book.categories[0].name }}
+      <div>{{ book.name }} == {{ book.categories[0].name }}</div>
+      <button (click)="onDelete(book.id)">Delete</button>
+      <button [value]="book.id">Update</button>
+      <hr />
     </div>
     <a routerLink="/addbook"> Add Book </a>
   </div>
