Add routeLink for categorization component

--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -15,7 +15,12 @@
           </div>
         </div>
       </a>
-      <a href="" class="flex-1 transition mx-6 my-6">
+      <a
+        (click)="clickList()"
+        routerLink="/categorization"
+        href=""
+        class="flex-1 transition mx-6 my-6"
+      >
         <div class="card-cat border-emerald-500 items-center border rounded">
           <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
             Categorization
