Add link to register component

--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -32,6 +32,10 @@
       >
         Login
       </button>
+
+      <a class="text-center text-sm mt-2" routerLink="/register">
+        or Register</a
+      >
     </form>
   </div>
 </div>
