Add link to library route and guardlike function

--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -27,7 +27,12 @@
           </div>
         </div>
       </a>
-      <a href="" class="flex-1 transition mx-6 my-6">
+      <a
+        (click)="clickList()"
+        routerLink="/library"
+        href=""
+        class="flex-1 transition mx-6 my-6"
+      >
         <div
           class="card-library border-emerald-500 items-center border rounded"
         >
