--- a/humblib/src/app/categorization/categorization.component.html
+++ b/humblib/src/app/categorization/categorization.component.html
@@ -1,9 +1,33 @@
-<div *ngFor="let cat of this.libraryService.categories">
-  {{ cat.name }}
+<div class="container mx-auto">
+  <div class="flex flex-col items-center">
+    <div
+      class="bg-emerald-900 hover:bg-emerald-600 transition text-cyan-50 p-2 m-2 rounded-md"
+      *ngFor="let cat of this.libraryService.categories"
+    >
+      {{ cat.name }}
+    </div>
+    <div class="bg-emerald-300 rounded-md p-4">
+      <form
+        class="flex flex-col items-center"
+        (submit)="onSubmit()"
+        [formGroup]="form"
+      >
+        <div class="text-xl text-emerald-900">New Category</div>
+        <label for=""></label>
+        <input
+          class="m-2 p-2 bg-emerald-100 rounded-md text-emerald-900"
+          formControlName="name"
+          type="text"
+          name=""
+          id=""
+        />
+        <button
+          class="m-2 p-2 bg-emerald-900 rounded-md hover:bg-emerald-600 text-cyan-50 transition"
+          type="submit"
+        >
+          Add
+        </button>
+      </form>
+    </div>
+  </div>
 </div>
-<div>New Category</div>
-<form (submit)="onSubmit()" [formGroup]="form">
-  <label for=""></label>
-  <input formControlName="name" type="text" name="" id="" />
-  <button type="submit">Add New Category</button>
-</form>
