--- a/humblib/src/app/categorization/categorization.component.html
+++ b/humblib/src/app/categorization/categorization.component.html
@@ -6,7 +6,7 @@
     >
       {{ cat.name }}
     </div>
-    <div class="bg-emerald-300 rounded-md p-4">
+    <div class="m-2 bg-emerald-300 rounded-md p-4">
       <form
         class="flex flex-col items-center"
         (submit)="onSubmit()"
