--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </a>
-      <a href="" class="flex-1 transition mx-6 my-6">
+      <a routerLink="notes" class="flex-1 transition mx-6 my-6">
         <div class="card-note border-emerald-500 items-center border rounded">
           <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
             Notes
