--- a/humblib/src/app/profile/profile.component.html
+++ b/humblib/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
     class="w-8"
   />
   <div class="text-xs text-cyan-50" *ngIf="this.loggerService.profileName">
-    {{ this.loggerService.profileName }}
+    {{ this.profile }}
   </div>
   <div class="text-xs text-cyan-50" *ngIf="!this.loggerService.profileName">
     Login
