--- a/humblib/src/app/update-book/update-book.component.html
+++ b/humblib/src/app/update-book/update-book.component.html
@@ -1,4 +1,8 @@
-<form [formGroup]="form" (submit)="onSubmit()">
+<form
+  *ngIf="this.libraryService.categoriesState.getValue()"
+  [formGroup]="form"
+  (submit)="onSubmit()"
+>
   <label for="name">Name</label>
   <input type="text" formControlName="name" name="name" id="name" />
   <div *ngFor="let cat of this.libraryService.categoriesState.getValue()">
@@ -6,7 +10,7 @@
       ><input
         [attr.checked]="isCat(cat) ? '' : null"
         type="checkbox"
-        [value]="cat.name"
+        [value]="cat.id"
         (change)="onCheckboxChange($event)"
         id=""
       />
