--- a/humblib/src/app/update-book/update-book.component.html
+++ b/humblib/src/app/update-book/update-book.component.html
@@ -1,21 +1,38 @@
-<form
-  *ngIf="this.libraryService.categoriesState.getValue()"
-  [formGroup]="form"
-  (submit)="onSubmit()"
->
-  <label for="name">Name</label>
-  <input type="text" formControlName="name" name="name" id="name" />
-  <div *ngFor="let cat of this.libraryService.categoriesState.getValue()">
-    <label
-      ><input
-        [attr.checked]="isCat(cat) ? '' : null"
-        type="checkbox"
-        [value]="cat.id"
-        (change)="onCheckboxChange($event)"
-        id=""
+<div class="container mx-auto">
+  <div class="mt-5 flex justify-center">
+    <form
+      *ngIf="this.libraryService.categoriesState.getValue()"
+      [formGroup]="form"
+      class="p-5 shadow-lg flex max-w-md items-center justify-center flex-col"
+      (submit)="onSubmit()"
+    >
+      <label class="bg-emerald-900 p-2 rounded-full text-cyan-50 m-2" for="name"
+        >Book Name</label
+      >
+      <input
+        type="text"
+        class="p-2 bg-emerald-100 text-emerald-900"
+        formControlName="name"
+        name="name"
+        id="name"
       />
-      {{ cat.name }}
-    </label>
+      <div *ngFor="let cat of this.libraryService.categoriesState.getValue()">
+        <mat-checkbox
+          color="primary"
+          [checked]="isCat(cat) ? '' : null"
+          [value]="cat.id"
+          (change)="onCheckboxChange($event)"
+          id=""
+        >
+          {{ cat.name }}
+        </mat-checkbox>
+      </div>
+      <button
+        class="bg-emerald-900 p-2 m-2 rounded-md text-cyan-50 hover:bg-emerald-700 transition hover:cursor-pointer"
+        type="submit"
+      >
+        Update
+      </button>
+    </form>
   </div>
-  <button type="submit">Update</button>
-</form>
+</div>
