--- a/humblib/src/app/profile/profile.component.html
+++ b/humblib/src/app/profile/profile.component.html
@@ -3,10 +3,7 @@
     src="https://cdn.iconscout.com/icon/free/png-512/profile-289-460696.png?f=avif&w=256"
     class="w-8"
   />
-  <div class="text-xs text-cyan-50" *ngIf="this.loggerService.profileName">
+  <div class="text-xs text-cyan-50">
     {{ this.profile }}
-  </div>
-  <div class="text-xs text-cyan-50" *ngIf="!this.loggerService.profileName">
-    Login
   </div>
 </a>
