--- a/humblib/src/app/list/list.component.html
+++ b/humblib/src/app/list/list.component.html
@@ -20,11 +20,12 @@
         >Update</a
       >
     </div>
-    <a
+    <button
+      matRipple
       class="m-2 transition self-center hover:bg-emerald-600 p-2 bg-emerald-900 text-cyan-50 rounded-md"
       routerLink="/addbook"
     >
       Add Book
-    </a>
+    </button>
   </div>
 </div>
