--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -10,7 +10,10 @@
         class="flex-1 transition mx-6 my-6"
       >
         <div class="card-list border-emerald-500 items-center border rounded">
-          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+          <div
+            matRipple
+            class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50"
+          >
             List
           </div>
         </div>
@@ -22,7 +25,10 @@
         class="flex-1 transition mx-6 my-6"
       >
         <div class="card-cat border-emerald-500 items-center border rounded">
-          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+          <div
+            matRipple
+            class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50"
+          >
             Categorization
           </div>
         </div>
@@ -36,14 +42,20 @@
         <div
           class="card-library border-emerald-500 items-center border rounded"
         >
-          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+          <div
+            matRipple
+            class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50"
+          >
             Library
           </div>
         </div>
       </a>
       <a routerLink="notes" class="flex-1 transition mx-6 my-6">
         <div class="card-note border-emerald-500 items-center border rounded">
-          <div class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50">
+          <div
+            matRipple
+            class="subtext text-3xl px-24 my-24 bg-transparent text-cyan-50"
+          >
             Notes
           </div>
         </div>
