--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -5,28 +5,28 @@
       (submit)="onSubmit()"
       [formGroup]="form"
     >
-      <label class="self-start text-emerald-900 text-md" for="username"
-        >Email</label
-      >
-      <input
-        class="bg-emerald-100 p-2 my-1 rounded border"
-        required=""
-        formControlName="username"
-        type="text"
-        name="username"
-        id="username"
-      />
-      <label class="self-start text-emerald-900 text-md" for="password"
-        >Password</label
-      >
-      <input
-        class="bg-emerald-100 p-2 my-1 rounded border"
-        required
-        formControlName="password"
-        type="password"
-        name="password "
-        id="password"
-      />
+      <mat-form-field
+        ><mat-label>Email</mat-label>
+        <input
+          matInput
+          required
+          formControlName="username"
+          type="text"
+          name="username"
+          id="username"
+      /></mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label for="password">Password</mat-label>
+        <input
+          matInput
+          required
+          formControlName="password"
+          type="password"
+          name="password "
+          id="password"
+        />
+      </mat-form-field>
       <button
         class="bg-emerald-900 text-cyan-50 p-2 m-2 rounded hover:bg-emerald-600 transition"
         type="submit"
