Refactor forms and add form control to register page

--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -27,12 +27,14 @@
           id="password"
         />
       </mat-form-field>
+
       <button
         class="bg-emerald-900 text-cyan-50 p-2 m-2 rounded hover:bg-emerald-600 transition"
         type="submit"
       >
         Login
       </button>
+      <a class="text-emerald-900" routerLink="/register">or Register</a>
     </form>
   </div>
 </div>
