Add note detail component

--- a/humblib/src/app/booknotes/booknotes.component.html
+++ b/humblib/src/app/booknotes/booknotes.component.html
@@ -17,7 +17,7 @@
         </div>
         <div>
           <button
-            [routerLink]="['/notedetail', note.book.id]"
+            [routerLink]="['/notedetail', note.id]"
             mat-fab
             class="m-1"
             color="primary"
