--- a/humblib/src/app/note-detail/note-detail.component.html
+++ b/humblib/src/app/note-detail/note-detail.component.html
@@ -11,7 +11,7 @@
       <mat-card-content class="my-2"> {{ note.note }} </mat-card-content>
       <mat-card-actions
         ><button
-          [routerLink]="['/notedetail', note.id]"
+          [routerLink]="['/notedit', note.id]"
           mat-fab
           class="m-1"
           color="primary"
