--- a/humblib/src/styles.scss
+++ b/humblib/src/styles.scss
@@ -17,12 +17,13 @@ body {
 
 $my-primary: mat.define-palette(mat.$green-palette, 900);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
+$my-warn: mat.define-palette(mat.$red-palette, 700);
 $my-theme: mat.define-light-theme(
   (
     color: (
       primary: $my-primary,
       accent: $my-accent,
+      warn: $my-warn,
     ),
     typography: mat.define-typography-config(),
     density: 0,
