--- a/humblib/src/app/categorization/categorization.component.html
+++ b/humblib/src/app/categorization/categorization.component.html
@@ -1,10 +1,16 @@
 <div class="container mx-auto">
   <div class="flex flex-col items-center">
-    <div
-      class="bg-emerald-900 hover:bg-emerald-600 transition text-cyan-50 p-2 m-2 rounded-md"
-      *ngFor="let cat of this.categories"
-    >
-      {{ cat.name }}
+    <div class="flex flex-wrap max-w-3xl">
+      <div
+        class="bg-emerald-900 hover:bg-emerald-600 transition flex items-center text-cyan-50 p-2 m-2 rounded-md"
+        *ngFor="let cat of this.categories"
+      >
+        <div class="m-2">{{ cat.name }}</div>
+
+        <button mat-icon-button (click)="deleteCat(cat.id)" color="warn">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
     </div>
     <div class="m-2 bg-emerald-300 rounded-md p-4">
       <form
