--- a/humblib/src/styles.scss
+++ b/humblib/src/styles.scss
@@ -15,7 +15,7 @@ body {
 
 @include mat.core();
 
-$my-primary: mat.define-palette(mat.$green-palette, 900);
+$my-primary: mat.define-palette(mat.$light-green-palette, 900);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $my-warn: mat.define-palette(mat.$red-palette, 700);
 $my-theme: mat.define-light-theme(
