--- a/humblib/src/app/booknotes/booknotes.component.html
+++ b/humblib/src/app/booknotes/booknotes.component.html
@@ -35,7 +35,12 @@
         </div>
       </div>
 
-      <div class="text-sm max-h-48 overflow-hidden">{{ note.note }}</div>
+      <div
+        [innerHTML]="note.note | line"
+        class="text-sm max-h-48 overflow-hidden"
+      >
+        {{ note.note }}
+      </div>
       <div class="my-2 p-2 text-xs border-t-emerald-900 border-t">
         {{ note.updated | date }}
       </div>
