--- a/humblib/src/styles.scss
+++ b/humblib/src/styles.scss
@@ -3,7 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+* {
+  box-sizing: border-box;
+}
 html,
 body {
   height: 100%;
@@ -11,6 +13,10 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mdc-notched-outline__notch {
+  border-right: none !important;
 }
 
 @include mat.core();
